assets/css/tailwind.css
@import url('./fonts.css');
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
html {
  scroll-behavior: smooth;
}
html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  background-color: black;
  font-family: 'Aktifo';
}
::-webkit-scrollbar {
  display: none;
}
:root {
    --vc-clr-secondary: #bfbfbf !important;
    --vc-clr-primary: #ffffff !important;
    --vc-pgn-width: 12px !important;
    --vc-pgn-height: 12px !important;
    --vc-pgn-border-radius: 16px !important;
}

